fix: try to fix background color on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -6,11 +6,11 @@
     dialog::backdrop {
         @apply bg-black/50;
     }
-    body {
-        @apply text-gray-900 bg-green-700 dark:text-green-50;
-    }
     header {
         @apply text-gray-900 bg-green-700 dark:text-green-50;
+    }
+    body {
+        @apply text-gray-900 bg-gray-100 dark:bg-gray-900 dark:text-green-50;
     }
     main {
         @apply text-gray-900 bg-gray-100 dark:text-green-50 dark:bg-gray-900 h-fit w-full;
